<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/colorGrey"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cv_na_title"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/newsImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@color/colorGrey"
            />

        <TextView
            android:id="@+id/descriptionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cv_na_description"
            android:textColor="@color/colorBlack"
            />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cv_na_date"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cv_na_link"
            android:textColor="@color/colorPrimary"
            />

    </LinearLayout>

</androidx.cardview.widget.CardView>