<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/colorWhite"
    app:contentPadding="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="4dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


            <TextView
                android:id="@+id/mName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cv_np_name"
                android:textColor="@color/colorBlack"
                android:textSize="24sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/mCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cv_np_category"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layout_marginVertical="4dp"
                />

        <TextView
            android:id="@+id/mDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cv_np_description"
            android:textColor="@color/colorBlack"
            />









    </LinearLayout>


</androidx.cardview.widget.CardView>